add remove and changepass
