# backend/src/main/java/ru/shtamov/backendlk2/extern/dto/ChangePasswordDto.java
@@ -1,0 +1,7 @@
+package ru.shtamov.backendlk2.extern.dto;
+
+public record ChangePasswordDto(
+        String oldPassword,
+        String newPassword
+) {
+}
